tests/negative/gold/delimited-test.gold
tests/negative/delimited-test.toit:7:9: error: Missing closing ']'
  y := x[499
        ^~~~
tests/negative/delimited-test.toit:8:7: error: Incomplete expression
  z :=
      ^
Compilation failed
